cleaned up server code for 'of the dead' version